[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/resources_speadsheet_view/typed_editors/dock_array.gd" type="Script" id=1]
[ext_resource path="res://addons/resources_speadsheet_view/editor_icon_button.gd" type="Script" id=2]

[sub_resource type="Image" id=3]
data = {
"data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ),
"format": "LumAlpha8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id=2]
flags = 4
flags = 4
image = SubResource( 3 )
size = Vector2( 16, 16 )

[node name="EditArray" type="VBoxContainer"]
anchor_right = 1.0
margin_bottom = 62.0
rect_pivot_offset = Vector2( -460, -28 )
mouse_filter = 0
script = ExtResource( 1 )

[node name="Header" type="HBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 14.0

[node name="HBoxContainer" type="HBoxContainer" parent="Header"]
margin_right = 455.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Header/HBoxContainer"]
margin_right = 70.0
margin_bottom = 14.0
text = "EDIT: Array"

[node name="HSeparator" type="HSeparator" parent="Header/HBoxContainer"]
margin_left = 74.0
margin_right = 455.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Header"]
margin_left = 459.0
margin_right = 565.0
margin_bottom = 14.0
text = "PROPERTY NAME"

[node name="HSeparator2" type="HSeparator" parent="Header"]
margin_left = 569.0
margin_right = 1024.0
margin_bottom = 14.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HSplitContainer" parent="."]
margin_top = 18.0
margin_right = 1024.0
margin_bottom = 70.0
split_offset = 192

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer"]
margin_right = 571.0
margin_bottom = 52.0
alignment = 2

[node name="Panel" type="MarginContainer" parent="HBoxContainer/HBoxContainer"]
margin_right = 320.0
margin_bottom = 52.0
size_flags_horizontal = 3

[node name="Label" type="TextEdit" parent="HBoxContainer/HBoxContainer/Panel"]
margin_right = 320.0
margin_bottom = 52.0
rect_min_size = Vector2( 128, 0 )
size_flags_vertical = 5
text = "[]"
readonly = true

[node name="VSeparator2" type="VSeparator" parent="HBoxContainer/HBoxContainer"]
margin_left = 324.0
margin_right = 328.0
margin_bottom = 52.0

[node name="Control" type="MarginContainer" parent="HBoxContainer/HBoxContainer"]
margin_left = 332.0
margin_right = 563.0
margin_bottom = 52.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/HBoxContainer/Control"]
margin_right = 231.0
margin_bottom = 52.0

[node name="LineEdit" type="LineEdit" parent="HBoxContainer/HBoxContainer/Control/VBoxContainer"]
margin_right = 231.0
margin_bottom = 26.0
rect_min_size = Vector2( 128, 0 )
clear_button_enabled = true
placeholder_text = "Input value to add/erase..."

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/HBoxContainer/Control/VBoxContainer"]
margin_top = 30.0
margin_right = 231.0
margin_bottom = 52.0

[node name="Label" type="Label" parent="HBoxContainer/HBoxContainer/Control/VBoxContainer/HBoxContainer"]
margin_top = 4.0
margin_right = 29.0
margin_bottom = 18.0
text = "Add:"

[node name="String" type="Button" parent="HBoxContainer/HBoxContainer/Control/VBoxContainer/HBoxContainer"]
margin_left = 33.0
margin_right = 61.0
margin_bottom = 22.0
hint_tooltip = "Add String"
icon = SubResource( 2 )
script = ExtResource( 2 )
icon_name = "String"

[node name="Int" type="Button" parent="HBoxContainer/HBoxContainer/Control/VBoxContainer/HBoxContainer"]
margin_left = 65.0
margin_right = 93.0
margin_bottom = 22.0
hint_tooltip = "Add Integer"
icon = SubResource( 2 )
script = ExtResource( 2 )
icon_name = "int"

[node name="Float" type="Button" parent="HBoxContainer/HBoxContainer/Control/VBoxContainer/HBoxContainer"]
margin_left = 97.0
margin_right = 125.0
margin_bottom = 22.0
hint_tooltip = "Add Float"
icon = SubResource( 2 )
script = ExtResource( 2 )
icon_name = "float"

[node name="Variant" type="Button" parent="HBoxContainer/HBoxContainer/Control/VBoxContainer/HBoxContainer"]
margin_left = 129.0
margin_right = 157.0
margin_bottom = 22.0
hint_tooltip = "Guess Type and Add"
icon = SubResource( 2 )
script = ExtResource( 2 )
icon_name = "Variant"

[node name="Label2" type="Label" parent="HBoxContainer/HBoxContainer/Control/VBoxContainer/HBoxContainer"]
margin_left = 161.0
margin_top = 4.0
margin_right = 199.0
margin_bottom = 18.0
text = "Erase:"

[node name="Remove" type="Button" parent="HBoxContainer/HBoxContainer/Control/VBoxContainer/HBoxContainer"]
margin_left = 203.0
margin_right = 231.0
margin_bottom = 22.0
hint_tooltip = "Erase Value from Array"
icon = SubResource( 2 )
script = ExtResource( 2 )
icon_name = "Remove"

[node name="VSeparator" type="VSeparator" parent="HBoxContainer/HBoxContainer"]
margin_left = 567.0
margin_right = 571.0
margin_bottom = 52.0

[node name="Control2" type="MarginContainer" parent="HBoxContainer"]
margin_left = 583.0
margin_right = 1024.0
margin_bottom = 52.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/Control2"]
margin_right = 441.0
margin_bottom = 52.0
alignment = 2

[node name="VSeparator2" type="VSeparator" parent="HBoxContainer/Control2/HBoxContainer"]
margin_right = 4.0
margin_bottom = 52.0

[node name="HFlowContainer" type="HFlowContainer" parent="HBoxContainer/Control2/HBoxContainer"]
margin_left = 8.0
margin_right = 441.0
margin_bottom = 52.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="HBoxContainer/Control2/HBoxContainer/HFlowContainer"]
margin_top = 4.0
margin_right = 48.0
margin_bottom = 18.0
text = "Recent:"

[node name="OptionButton" type="OptionButton" parent="HBoxContainer/Control2/HBoxContainer/HFlowContainer"]
margin_left = 52.0
margin_right = 106.0
margin_bottom = 22.0
text = "Add"
items = [ "Add", null, false, 0, null, "Erase", null, false, 1, null, "Delete From Recent", null, false, 2, null ]
selected = 0

[node name="AddRecentFromSel" type="Button" parent="HBoxContainer/Control2/HBoxContainer/HFlowContainer"]
margin_left = 110.0
margin_right = 138.0
margin_bottom = 22.0
hint_tooltip = "Copy Selection into this List"
icon = SubResource( 2 )
script = ExtResource( 2 )
icon_name = "ListSelect"

[connection signal="pressed" from="HBoxContainer/HBoxContainer/Control/VBoxContainer/HBoxContainer/String" to="." method="_on_String_pressed"]
[connection signal="pressed" from="HBoxContainer/HBoxContainer/Control/VBoxContainer/HBoxContainer/Int" to="." method="_on_Int_pressed"]
[connection signal="pressed" from="HBoxContainer/HBoxContainer/Control/VBoxContainer/HBoxContainer/Float" to="." method="_on_Float_pressed"]
[connection signal="pressed" from="HBoxContainer/HBoxContainer/Control/VBoxContainer/HBoxContainer/Variant" to="." method="_on_Variant_pressed"]
[connection signal="pressed" from="HBoxContainer/HBoxContainer/Control/VBoxContainer/HBoxContainer/Remove" to="." method="_on_Remove_pressed"]
[connection signal="pressed" from="HBoxContainer/Control2/HBoxContainer/HFlowContainer/AddRecentFromSel" to="." method="_on_AddRecentFromSel_pressed"]
